feat: adding catalog tests for iceberg